--- a/.editorconfig
+++ b/.editorconfig
@@ -4,18 +4,21 @@
 # WordPress Coding Standards
 # https://make.wordpress.org/core/handbook/coding-standards/
 
+root = true
+
 [*]
 charset = utf-8
 end_of_line = lf
-indent_size = 4
-tab_width = 4
-indent_style = tab
 insert_final_newline = true
 trim_trailing_whitespace = true
+indent_style = tab
+
+[*.yml]
+indent_style = space
+indent_size = 2
+
+[*.md]
+trim_trailing_whitespace = false
 
 [*.txt]
 end_of_line = crlf
-
-[*.{md,json,yml,eslintrc,stylelintrc}]
-indent_style = space
-indent_size = 2
