--- a/composer.json
+++ b/composer.json
@@ -1,57 +1,59 @@
 {
-  "name": "mazepress/core",
-  "type": "wordpress-plugin",
-  "description": "A package library for WordPress plugin and theme development.",
-  "license": "MIT",
-  "prefer-stable": true,
-	"minimum-stability": "dev",
-  "require": {
-    "php": ">=7.4",
-    "automattic/jetpack-autoloader": "^2.11",
-    "composer/installers": "^2.2"
-  },
-  "require-dev": {
-    "phpcompatibility/phpcompatibility-wp": "^2.1",
-    "wp-cli/i18n-command": "^2.5",
-    "wp-cli/dist-archive-command": "^2.0",
-    "wp-coding-standards/wpcs": "^3.0",
-    "dealerdirect/phpcodesniffer-composer-installer": "^1.0",
-    "szepeviktor/phpstan-wordpress": "^1.3",
-    "phpunit/phpunit": "^9.6",
-    "10up/wp_mock": "^1.0",
-    "teqnomaze/code-coverage": "^1.0"
-  },
-  "scripts": {
-    "phpcs": "./vendor/bin/phpcs --standard=phpcs.xml",
-    "phpcbf": "./vendor/bin/phpcbf src tests core.php",
-    "phpstan": "./vendor/bin/phpstan analyse -c phpstan.neon --memory-limit 2G",
-    "phpunit": "./vendor/bin/phpunit --configuration phpunit.xml",
-    "coverage": "./vendor/bin/code-coverage ./build/clover.xml 90",
-    "wp:pot": "./vendor/bin/wp i18n make-pot . ./languages/core.pot --include='src,packages,core.php'",
-    "wp:dist": "./vendor/bin/wp dist-archive . ./../core.zip",
-    "post-install-cmd": "composer dump-autoload",
-    "post-update-cmd": "composer dump-autoload"
-  },
-  "autoload": {
-    "psr-4": {
-      "Mazepress\\Core\\": "src"
-    }
-  },
-  "autoload-dev": {
+	"name": "mazepress/core",
+	"type": "wordpress-plugin",
+	"description": "A package library for WordPress plugin and theme development.",
+	"license": "MIT",
+	"require": {
+		"php": "^7.4 | ^8.0",
+		"automattic/jetpack-autoloader": "^2.12",
+		"composer/installers": "^2.2"
+	},
+	"require-dev": {
+		"phpcompatibility/phpcompatibility-wp": "^2.1.4",
+		"wp-cli/i18n-command": "^2.5",
+		"wp-coding-standards/wpcs": "^3.0.1",
+		"dealerdirect/phpcodesniffer-composer-installer": "^1.0",
+		"szepeviktor/phpstan-wordpress": "^1.3.2",
+		"phpunit/phpunit": "^9.6.16",
+		"10up/wp_mock": "^1.0",
+		"teqnomaze/code-coverage": "^1.0"
+	},
+	"scripts": {
+		"phpcs": "./vendor/bin/phpcs --standard=phpcs.xml",
+		"phpcbf": "./vendor/bin/phpcbf src tests",
+		"phpstan": "./vendor/bin/phpstan analyse -c phpstan.neon",
+		"phpunit": "./vendor/bin/phpunit --configuration phpunit.xml",
+		"coverage": "./vendor/bin/code-coverage ./build/clover.xml 90",
+		"make:pot": "./vendor/bin/wp i18n make-pot . ./languages/core.pot --include='src'",
+		"make:mo": "./vendor/bin/wp i18n make-mo ./languages/core.pot'",
+		"update:po": "./vendor/bin/wp i18n update-po ./languages/core.pot'",
+		"post-install-cmd": "composer dump-autoload",
+		"post-update-cmd": "composer dump-autoload"
+	},
+	"autoload": {
+		"psr-4": {
+			"Mazepress\\Core\\": "src"
+		}
+	},
+	"autoload-dev": {
 		"psr-4": {
 			"Mazepress\\Core\\Tests\\": "tests"
 		}
 	},
-  "config": {
-    "optimize-autoloader": true,
+	"prefer-stable": true,
+	"minimum-stability": "dev",
+	"config": {
+		"optimize-autoloader": true,
 		"sort-packages": true,
-		"platform": {
-			"php": "7.4"
-		},
-    "allow-plugins": {
-      "composer/installers": true,
-      "automattic/jetpack-autoloader": true,
-      "dealerdirect/phpcodesniffer-composer-installer": true
-    }
-  }
+		"allow-plugins": {
+			"composer/installers": true,
+			"automattic/jetpack-autoloader": true,
+			"dealerdirect/phpcodesniffer-composer-installer": true
+		}
+	},
+	"extra": {
+		"installer-paths": {
+			"packages/{$name}/": ["type:wordpress-plugin"]
+		}
+	}
 }
